# pastello

./: .gitignore  Makefile  buf.gen.yaml  go.work  how_to_clean_go_work.md  instructions_to_run.md  notes_on_current_environment.md  package.json  pnpm-lock.yaml  running_the_app.md
apps/api/: Makefile  buf.gen.yaml  go.mod  go.sum  package.json  pnpm-lock.yaml  settings.json
apps/api-rust/: Cargo.toml  config.yaml
apps/api-rust/src/: app_logic.rs  config.rs  main.rs
apps/api-rust/src/adapters/inbound/ws/: auth.rs  mod.rs
apps/api-rust/src/adapters/outbound/: clock.rs  eventbus.rs  id_gen.rs  memory_repo.rs  mod.rs  rng.rs
apps/api-rust/src/application/: commands.rs  mod.rs
apps/api-rust/src/application/services/: command_registry.rs  engine_factory.rs  game_service.rs  mod.rs
apps/api-rust/src/application/usecase/: handle_game_command.rs  mod.rs
apps/api-rust/src/domain/: game.rs  mod.rs  puzzle.rs  trivia.rs
apps/api-rust/src/pb/: mod.rs  runecraftstudios.pastello.auth.session.v1.rs  runecraftstudios.pastello.game.puzzle.v1.rs  runecraftstudios.pastello.game.session.v1.rs  runecraftstudios.pastello.game.trivia.v1.rs  runecraftstudios.pastello.game.types.v1.rs  runecraftstudios.pastello.web.auth.v1.rs  runecraftstudios.pastello.web.game.v1.rs
apps/api-rust/src/ports/: mod.rs
database_setup/: setup_database.md  setup_database.sql  setup_schemas.sql
pastello-backend/: .gitignore  generate-pb.sh  go.mod  test.go
pastello-contracts/: index.ts  package.json
pastello-ui/: package.json  pnpm-lock.yaml
proto/: notes_on_this_proto_folder_structure.md
(+135 files in other folders)
