[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.48.0", features = ["full"] }

# Web Server & WebSockets
axum = { version = "0.8.7", features = ["ws"] }

# --- FIX: Added futures-util ---
# Used for .split() on WebSocket stream
futures-util = { version = "0.3.31", features = ["sink"] }

# Protobuf Runtime
prost = "0.14.1"
prost-types = "0.14.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Config Loading
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17" # Version from your log

# Async Traits
async-trait = "0.1.89"

# Time & IDs
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"] }
rand = "0.9.2"

# State Management
dashmap = "6.1.0"

# Auth & Web
jsonwebtoken = "10.2.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
tokio-stream = "0.1.17"
